@@ -62,66 +62,75 @@ int libevtx_file_initialize(
 
 		return( -1 );
 	}
-	if( *file == NULL )
+	if( *file != NULL )
 	{
-		internal_file = memory_allocate_structure(
-		                 libevtx_internal_file_t );
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_VALUE_ALREADY_SET,
+		 "%s: invalid file value already set.",
+		 function );
 
-		if( internal_file == NULL )
-		{
-			libcerror_error_set(
-			 error,
-			 LIBCERROR_ERROR_DOMAIN_MEMORY,
-			 LIBCERROR_MEMORY_ERROR_INSUFFICIENT,
-			 "%s: unable to create file.",
-			 function );
-
-			goto on_error;
-		}
-		if( memory_set(
-		     internal_file,
-		     0,
-		     sizeof( libevtx_internal_file_t ) ) == NULL )
-		{
-			libcerror_error_set(
-			 error,
-			 LIBCERROR_ERROR_DOMAIN_MEMORY,
-			 LIBCERROR_MEMORY_ERROR_SET_FAILED,
-			 "%s: unable to clear file.",
-			 function );
-
-			memory_free(
-			 internal_file );
-
-			return( -1 );
-		}
-		if( libevtx_io_handle_initialize(
-		     &( internal_file->io_handle ),
-		     error ) != 1 )
-		{
-			libcerror_error_set(
-			 error,
-			 LIBCERROR_ERROR_DOMAIN_RUNTIME,
-			 LIBCERROR_RUNTIME_ERROR_INITIALIZE_FAILED,
-			 "%s: unable to create IO handle.",
-			 function );
-
-			goto on_error;
-		}
-		if( libevtx_i18n_initialize(
-		     error ) != 1 )
-		{
-			libcerror_error_set(
-			 error,
-			 LIBCERROR_ERROR_DOMAIN_RUNTIME,
-			 LIBCERROR_RUNTIME_ERROR_INITIALIZE_FAILED,
-			 "%s: unable to initalize internationalization (i18n).",
-			 function );
-
-			goto on_error;
-		}
-		*file = (libevtx_file_t *) internal_file;
+		return( -1 );
 	}
+	internal_file = memory_allocate_structure(
+	                 libevtx_internal_file_t );
+
+	if( internal_file == NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_MEMORY,
+		 LIBCERROR_MEMORY_ERROR_INSUFFICIENT,
+		 "%s: unable to create file.",
+		 function );
+
+		goto on_error;
+	}
+	if( memory_set(
+	     internal_file,
+	     0,
+	     sizeof( libevtx_internal_file_t ) ) == NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_MEMORY,
+		 LIBCERROR_MEMORY_ERROR_SET_FAILED,
+		 "%s: unable to clear file.",
+		 function );
+
+		memory_free(
+		 internal_file );
+
+		return( -1 );
+	}
+	if( libevtx_io_handle_initialize(
+	     &( internal_file->io_handle ),
+	     error ) != 1 )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_INITIALIZE_FAILED,
+		 "%s: unable to create IO handle.",
+		 function );
+
+		goto on_error;
+	}
+	if( libevtx_i18n_initialize(
+	     error ) != 1 )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_INITIALIZE_FAILED,
+		 "%s: unable to initalize internationalization (i18n).",
+		 function );
+
+		goto on_error;
+	}
+	*file = (libevtx_file_t *) internal_file;
+
 	return( 1 );
 
 on_error:
