@@ -787,7 +787,7 @@ PyObject *pyevtx_file_close(
 }
 
 /* Retrieves the codepage used for ASCII strings in the file
- * Returns a Python object holding the offset if successful or NULL on error
+ * Returns a Python object if successful or NULL on error
  */
 PyObject *pyevtx_file_get_ascii_codepage(
            pyevtx_file_t *pyevtx_file )
@@ -866,7 +866,7 @@ PyObject *pyevtx_file_get_ascii_codepage(
 }
 
 /* Sets the codepage used for ASCII strings in the file
- * Returns a Python object holding the offset if successful or NULL on error
+ * Returns a Python object if successful or NULL on error
  */
 PyObject *pyevtx_file_set_ascii_codepage(
            pyevtx_file_t *pyevtx_file,
