@@ -59,6 +59,11 @@ Debug:
 Recovery:
 * scan for records in chunk free space
 
+20121104
+* pyevtx: bug fixes
+* updated dependencies
+* code clean up
+
 20121031
 * worked on formatted message strings
 
